tests/NormalTests/paczka1/fuzzy1/16097471.err
Error in line 1: FWn A933 34,6
Error in line 6: FWn A624 65,0
Error in line 25: FWn S954 2,3
